--- a/client/style.css
+++ b/client/style.css
@@ -8,13 +8,13 @@
 }
 
 body {
-  background: #343541;
+  background: #000000;
 }
 
 #app {
   width: 100vw;
   height: 100vh;
-  background: #343541;
+  background: #000000;
 
   display: flex;
   flex-direction: column;
@@ -50,7 +50,7 @@ body {
 }
 
 .ai {
-  background: #40414F;
+  background: #000000;
 }
 
 .chat {
@@ -69,7 +69,7 @@ body {
   height: 36px;
   border-radius: 5px;
 
-  background: #5436DA;
+  background: #1aff00;
 
   display: flex;
   justify-content: center;
@@ -77,19 +77,19 @@ body {
 }
 
 .ai .profile {
-  background: #10a37f;
+  background: #000000;
 }
 
 .profile img {
-  width: 60%;
-  height: 60%;
+  width: 100%;
+  height: 100%;
   object-fit: contain;
 }
 
 .message {
   flex: 1;
 
-  color: #dcdcdc;
+  color: #ffffff;
   font-size: 20px;
 
   max-width: 100%;
@@ -117,7 +117,7 @@ form {
   max-width: 1280px;
   margin: 0 auto;
   padding: 10px;
-  background: #40414F;
+  background: #000000;
 
   display: flex;
   flex-direction: row;
@@ -127,7 +127,7 @@ form {
 textarea {
   width: 100%;
 
-  color: #fff;
+  color: rgb(255, 255, 255);
   font-size: 18px;
 
   padding: 10px;
